# qcml

./: .gitignore  README.md  pyproject.toml
nbs/: experiments.ipynb
src/qcml/: intrinsic_dimension.py  model.py  utils.py
