[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qcml"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Thomas Bourgeois"},
]
description = "Quantum Cognition Machine Learning"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/thomasbourgeois/qcml"